Silent test logging